<!-- Copyright 2013 Matthew Hague (matthewhague@zoho.com)
     Released under the GNU General Public License v3 (see GPL.txt) -->


<resources>

    <string name="app_name">TeaCup</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="notitle">It\'s oh so quiet.</string>
    <string name="albumArtDesc">Album Art.</string>

    <string name="lastFMCacheDesc">Cache Last FM album art</string>
    <string name="lastFMCacheStyle">Cache directory</string>
    <string name="lastFMCacheNone">Don\'t cache album art</string>
    <string name="lastFMCacheInDir">Cache in specified directory</string>
    <string name="lastFMCacheWithMusic">Cache in music file directory</string>
    <string name="lastFMPrefetchAlbumArt">Prefetch Album Art</string>
    <string name="lastFMPrefetchAlbumArtNoConnection">Prefetch Album Art\n(No Connection)</string>
    <string name="lastFMPrefetchAlbumArtAgain">Fetch Again</string>
    <string name="lastFMLegalText">Last FM features powered by the %s at AudioScrobbler.</string>

    <string name="lastFMScrobbleOptions">Last FM Scrobbling</string>
    <string name="lastFMScrobbleWifi">Scrobble to Last FM (WiFi)</string>
    <string name="lastFMScrobbleNetwork">Scrobble to Last FM (Phone network)</string>
    <string name="lastFMScrobbleCache">Cache scrobble when offline</string>
    <string name="lastFMUserNameDesc">Last FM Username</string>
    <string name="lastFMUserNameHint">Your Last FM username.</string>
    <string name="lastFMPasswordDesc">Last FM password</string>
    <string name="lastFMPasswordHint">Your Last FM password.</string>
    <string name="lastFMClearCache">Clear Scrobble Cache \n (Cur. Size: %d bytes.)</string>
    <string name="lastFMButtonHint">Last FM</string>

    <string name="testLastFMBadReply">Error connecting to Last FM.</string>
    <string name="testLastFMNoAuthConnection">No connection.</string>
    <string name="testLastFMAuth">Test Authentication</string>
    <string name="testLastFMAuthResponse">Test Authentication \n (%s)</string>
    <string name="testLastFMAuthWaiting">Test Authentication \n (...)</string>
    <string name="testLastFMAuthOK">OK</string>

    <string name="playPauseDesc">Play/Pause.</string>
    <string name="noartist">Shh!</string>
    <string name="jumpNextDesc">Jump to next track.</string>
    <string name="jumpPrevDesc">Jump to previous track.</string>
    <string name="albumArtSelect">Album art sources</string>
    <string name="getEmbeddedArt">Embedded art</string>
    <string name="getDirectoryArt">Music file directory</string>
    <string name="getLastFMArtWifi">Last FM (WiFi)</string>
    <string name="getLastFMArtNetwork">Last FM (phone network)</string>
    <string name="lastFMDirectoryHint">Cache directory for downloaded Last FM art.</string>

    <string name="playerSelectDesc">Choose music player</string>
    <string name="playerSelected">Android Player</string>
    <string name="selectPlayerDesc">The music application for the widget.</string>
    <string name="androidplayer">Android Player</string>
    <string name="cyanogenmodplayer">CyanogenMod Eleven</string>
    <string name="customplayer">Custom Player</string>

    <string name="metaChangedAction">Metadata changed intent</string>
    <string name="metaChangedId">Metadata changed track ID field.</string>
    <string name="metaChangedActionHint">The action broadcast by your music player when the track metadata changes.</string>
    <string name="metaChangedIdHint">The id field of the playing track in the broadcast intent action.</string>

    <string name="playerPackage">Player Package</string>
    <string name="playerPackageHint">The package name of the music player.</string>
    <string name="playstateChangedAction">Playstate changed action</string>
    <string name="playstateChangedActionHint">The action broadcast when toggling between play and pause.</string>
    <string name="playstateChangedPlaying">Playstate changed \'playing\' field</string>
    <string name="playstateChangedPlayingHint">The field indicating whether the current track is playing or paused.</string>

    <string name="jumpPreviousAction">Jump previous action</string>
    <string name="jumpPreviousActionHint">The action to broadcast to jump to the previous track.</string>
    <string name="jumpPreviousCommandField">Jump previous command field label</string>
    <string name="jumpPreviousCommandFieldHint">The field label of the jump previous command.</string>
    <string name="jumpPreviousCommand">Jump previous command</string>
    <string name="jumpPreviousCommandHint">The command value for jump previous.</string>

    <string name="playPauseAction">Play/pause action</string>
    <string name="playPauseActionHint">The action to broadcast to toggle play/pause.</string>
    <string name="playPauseCommandField">Play/pause command field label</string>
    <string name="playPauseCommandFieldHint">The field label of the play/pause command.</string>
    <string name="playPauseCommand">Play/pause command</string>
    <string name="playPauseCommandHint">The command value for play/pause.</string>

    <string name="jumpNextAction">Jump next action</string>
    <string name="jumpNextActionHint">The action to broadcast to jump to the next track.</string>
    <string name="jumpNextCommandField">Jump next command field label</string>
    <string name="jumpNextCommandFieldHint">The field label of the jump next command.</string>
    <string name="jumpNextCommand">Jump next command</string>
    <string name="jumpNextCommandHint">The command value for jump next.</string>
    <string name="customPlayerName">Custom Player</string>
    <string name="androidPlayerName">Android Player</string>

</resources>
