<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:padding="15dp">

    <ImageView
        android:id="@+id/albumArtView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_blankalbum"
        android:contentDescription="@string/albumArtDesc" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingLeft="15dp" >

        <TextView
            android:id="@+id/artistView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noartist"
            android:ellipsize="marquee"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/trackView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notrack"
            android:ellipsize="marquee"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="right" >

    	<ImageButton
    	    android:id="@+id/playPauseButton"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_vertical"
    	    android:background="@android:color/transparent"
    	    android:contentDescription="@string/playPauseDesc"
    	    android:src="@drawable/ic_play" />
       
    </LinearLayout>

</LinearLayout>